--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "goit-react-hw-05-movies",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://OrestKlymko.github.io/goit-react-hw-05-movies/",
+  "homepage": "https://OrestKlymko.github.io/React-React-Routing/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
